syntax = "proto3";

package tattooapp.user.v1;

import "tattooapp/user/v1/user.proto";

option go_package = "github.com/kbremont/tattoo-app/backend/api/proto/gen/go/tattooapp/user/v1;pb";

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

// information required to create a new user
message CreateUserRequest {
    string id = 1;
    UserRole role = 2;
    string first_name = 3;
    string last_name = 4;
}

// information returned after creating a new user
message CreateUserResponse {
    User user = 1;
}

// information required to get a user
message GetUserRequest {
    string id = 1;
}

// information returned after getting a user
message GetUserResponse {
    User user = 1;
}

// information required to update a user
message UpdateUserRequest {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
}

// information returned after updating a user
message UpdateUserResponse {
    User user = 1;
}

// information required to delete a user
message DeleteUserRequest {
    string id = 1;
}

// information returned after deleting a user
message DeleteUserResponse {
    bool success = 1;
}